--- a/reciver.html
+++ b/reciver.html
@@ -24,6 +24,9 @@
         function moon(){
             window.open("sub.html","mozillaTab")
         }
+        function Mars(){
+            window.open("Mars.html","mozillaTab")
+        }
     </script>
     <style>
         *{scroll-behavior: smooth;}/* General Body & Typography */
@@ -120,7 +123,7 @@
                       <span>20.4.2023</span>
                     </div>
                      <div class="mission-item glass-effect" onclick="moon()">
-                       <div class="icon-wrapper"><img src="pngwing.com (2).png" class="orbit-img" alt=""></div>
+                       <div class="icon-wrapper"><img src="moon.jpg" class="orbit-img" alt=""></div>
                          <h3>Planet<br> Moon</h3>
                          <span>20.4.2023</span>
                     </div>
@@ -139,8 +142,8 @@
                     <h3>Planet Neuptun</h3>
                     <span>20.4.2023</span>
                 </div>
-            <div class="mission-item glass-effect" onclick="StillNotFound()">
-                <div class="icon-wrapper"><img src="pngwing.com (8).png" class="orbit-img" alt=""></div>
+            <div class="mission-item glass-effect" onclick="Mars()">
+                <div class="icon-wrapper"><img src="Mars03.jpg" class="orbit-img" alt=""></div>
                  <h3>Planet <br>Mars</h3>
                 <span>20.4.2023</span>
             </div>
