new changes commit

--- a/reciver.html
+++ b/reciver.html
@@ -118,7 +118,7 @@
     <h2>Explore what orbit you want to see in details</h2>
      <div class="orbits">
                     <div class="mission-item glass-effect" onclick="StillNotFound()">
-                     <div class="icon-wrapper"><img src="pngwing.com (1).png" class="orbit-img" alt=""></div>
+                     <div class="icon-wrapper"><img src="Earth1.jpg" class="orbit-img" alt=""></div>
                       <h3>Planet <br>Earth</h3>
                       <span>20.4.2023</span>
                     </div>
