--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmic Journeys</title>
+    <title>galaxies_of _dreams</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;770&family=Oxanium:wght@400;600&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-satellite"></i>
-            <span>COMPANY</span>
+            <span>Galaxies Of Dreams</span>
         </div>
         <nav>
             <ul>
@@ -39,7 +39,7 @@
             <div class="hero-background-gradient"></div>
             <div class="hero-content">
                 <h1>Your journey into the unknown begins now.</h1>
-                <p>Explore the depths of the universe and learn its secrets with the latest technology.</p>
+                <p>Explore the depths of the universe and learn its secrets with the latest technology, using Livit</p>
                 <div class="hero-cta-buttons">
                     <a href="#h" class="btn-primary">Start Discovering</a>
                     <a href="#" class="btn-secondary" onclick="alert()">Watch video<i class="fas fa-play"></i></a>
