--- a/reciver.html
+++ b/reciver.html
@@ -22,7 +22,7 @@
             swal("We are sorry", "The feature that you are seeking  is under development right now", "error");
         }
         function moon(){
-            window.open("sub.html","mozillaTab")
+            window.open("Moon.html","mozillaTab")
         }
         function Mars(){
             window.open("Mars.html","mozillaTab")
@@ -128,17 +128,17 @@
                          <span>20.4.2023</span>
                     </div>
                         <div class="mission-item glass-effect" onclick="StillNotFound()">
-                          <div class="icon-wrapper"><img src="pngwing.com (3).png" class="orbit-img" width="130px" alt=""></div>
+                                                    <div class="icon-wrapper"><img src="Sun.png" class="orbit-img" width="130px" alt="Sun"></div>
                             <h3>Planet<br> Sun <br></h3>
                            <span>20.4.2023</span>
                        </div>
                              <div class="mission-item glass-effect" onclick="StillNotFound()">
-                               <div class="icon-wrapper"><img src="pngwing.com (4).png" class="orbit-img" alt=""></div>
+                               <div class="icon-wrapper"><img src="Galaxy.png" class="orbit-img" alt="Galaxy"></div>
                                 <h3>Planet Mercury</h3>
                                 <span>20.4.2023</span>
                             </div>
                 <div class="mission-item glass-effect" onclick="StillNotFound()">
-                 <div class="icon-wrapper"><img src="pngwing.com (5).png" class="orbit-img" alt=""></div>
+                 <div class="icon-wrapper"><img src="Neptune.png" class="orbit-img" alt="Neptune"></div>
                     <h3>Planet Neuptun</h3>
                     <span>20.4.2023</span>
                 </div>
@@ -148,7 +148,7 @@
                 <span>20.4.2023</span>
             </div>
                     <div class="mission-item glass-effect" onclick="StillNotFound()">
-                    <div class="icon-wrapper"><img src="pngwing.com (7).png" class="orbit-img" alt=""></div>
+                    <div class="icon-wrapper"><img src="jupitur.png" class="orbit-img" alt="Jupiter"></div>
                     <h3>Planet<br> Jupiter</h3>
                     <span>20.4.2023</span>
                    </div>
@@ -159,7 +159,7 @@
                     <span>20.4.2023</span>
                    </div>
                                        <div class="mission-item glass-effect" onclick="redirect()">
-                    <div class="icon-wrapper"><img src="pngwing.com (10).png" class="orbit-img" alt=""></div>
+                    <div class="icon-wrapper"><img src="pngwing.com (8).png" class="orbit-img" alt="Explore"></div>
                     <h3>Explore<br>Space</h3>
                     <span>20.4.2023</span>
                    </div>
