--- a/reciver.html
+++ b/reciver.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;770&family=Oxanium:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
@@ -118,48 +118,48 @@
     <h2>Explore what orbit you want to see in details</h2>
      <div class="orbits">
                     <div class="mission-item glass-effect" onclick="StillNotFound()">
-                     <div class="icon-wrapper"><img src="Earth1.jpg" class="orbit-img" alt=""></div>
+                     <div class="icon-wrapper"><img src="../ImgFold/Earth1.jpg" class="orbit-img" alt=""></div>
                       <h3>Planet <br>Earth</h3>
                       <span>20.4.2023</span>
                     </div>
                      <div class="mission-item glass-effect" onclick="moon()">
-                       <div class="icon-wrapper"><img src="moon.jpg" class="orbit-img" alt=""></div>
+                       <div class="icon-wrapper"><img src="../ImgFold/moon.jpg" class="orbit-img" alt=""></div>
                          <h3>Planet<br> Moon</h3>
                          <span>20.4.2023</span>
                     </div>
                         <div class="mission-item glass-effect" onclick="StillNotFound()">
-                                                    <div class="icon-wrapper"><img src="Sun.png" class="orbit-img" width="130px" alt="Sun"></div>
+                                                    <div class="icon-wrapper"><img src="../ImgFold/Sun.png" class="orbit-img" width="130px" alt="Sun"></div>
                             <h3>Planet<br> Sun <br></h3>
                            <span>20.4.2023</span>
                        </div>
                              <div class="mission-item glass-effect" onclick="StillNotFound()">
-                               <div class="icon-wrapper"><img src="Galaxy.png" class="orbit-img" alt="Galaxy"></div>
+                               <div class="icon-wrapper"><img src="../ImgFold/Galaxy.png" class="orbit-img" alt="Galaxy"></div>
                                 <h3>Planet Mercury</h3>
                                 <span>20.4.2023</span>
                             </div>
                 <div class="mission-item glass-effect" onclick="StillNotFound()">
-                 <div class="icon-wrapper"><img src="Neptune.png" class="orbit-img" alt="Neptune"></div>
+                 <div class="icon-wrapper"><img src="../ImgFold/Neptune.png" class="orbit-img" alt="Neptune"></div>
                     <h3>Planet Neuptun</h3>
                     <span>20.4.2023</span>
                 </div>
             <div class="mission-item glass-effect" onclick="Mars()">
-                <div class="icon-wrapper"><img src="Mars03.jpg" class="orbit-img" alt=""></div>
+                <div class="icon-wrapper"><img src="../ImgFold/Mars03.jpg" class="orbit-img" alt=""></div>
                  <h3>Planet <br>Mars</h3>
                 <span>20.4.2023</span>
             </div>
                     <div class="mission-item glass-effect" onclick="StillNotFound()">
-                    <div class="icon-wrapper"><img src="jupitur.png" class="orbit-img" alt="Jupiter"></div>
+                    <div class="icon-wrapper"><img src="../ImgFold/jupitur.png" class="orbit-img" alt="Jupiter"></div>
                     <h3>Planet<br> Jupiter</h3>
                     <span>20.4.2023</span>
                    </div>
                     
                     <div class="mission-item glass-effect" onclick="StillNotFound()">
-                    <div class="icon-wrapper"><img src="pngwing.com (9).png" class="orbit-img" alt=""></div>
+                    <div class="icon-wrapper"><img src="../ImgFold/pngwing.com (9).png" class="orbit-img" alt=""></div>
                     <h3>Planet<br>Uranus</h3>
                     <span>20.4.2023</span>
                    </div>
                                        <div class="mission-item glass-effect" onclick="redirect()">
-                    <div class="icon-wrapper"><img src="pngwing.com (8).png" class="orbit-img" alt="Explore"></div>
+                    <div class="icon-wrapper"><img src="../ImgFold/pngwing.com (8).png" class="orbit-img" alt="Explore"></div>
                     <h3>Explore<br>Space</h3>
                     <span>20.4.2023</span>
                    </div>
