--- a/HtmFold/reciver.html
+++ b/HtmFold/reciver.html
@@ -107,8 +107,8 @@
         <nav>
             <ul>
                 <li><a href="reciver.html">Services</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a href="docs.html">About</a></li>
+                <li><a href="docs.html">Contact</a></li>
                 <li><a href="#" class="btn-outline">Sign In</a></li>
             </ul>
         </nav>
