--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@
         <p>&copy; 2024 SPACE. All rights reserved.</p>
     </footer>
 
-    <script src="../Space_proto/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
