--- a/Earth.html
+++ b/Earth.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Space Explorer - Earth</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     html,body{
       height:100%;
@@ -54,7 +54,7 @@
         </div>
         <nav>
             <ul></ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="reciver.html">Services</a></li>
                 <li><a href="Mars.html">Mars</a></li>
                 <li><a href="Moon.html">Moon</a></li>
@@ -108,6 +108,6 @@
         document.getElementById("zoom-level").innerText = "Zoom: " + percentage + "%";
       });
     </script>
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
