--- a/hi.html
+++ b/hi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OpenSeadragon Demo</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body { margin: 0; background:#0b1220; color:#fff; font-family: sans-serif; }
     #viewer { width: 100vw; height: 100vh; }
@@ -23,7 +23,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="reciver.html">Services</a></li>
                 <li><a href="Mars.html">Mars</a></li>
                 <li><a href="Moon.html">Moon</a></li>
@@ -94,6 +94,6 @@
         <p>&copy; 2024 SPACE. All rights reserved.</p>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
