--- a/Mars.html
+++ b/Mars.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Space Explorer - Mars</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     html,body{
       height:100%;
@@ -112,6 +112,6 @@
         <p>&copy; 2024 SPACE. All rights reserved.</p>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
