--- a/Moon.html
+++ b/Moon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Explorer - Moon</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
     html,body{
       height:100%;
@@ -112,6 +112,6 @@
         <p>&copy; 2024 SPACE. All rights reserved.</p>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
