Fix title and update link in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>galaxies_of _dreams</title>
+    <title>GalaxiesOfDreams</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;770&family=Oxanium:wght@400;600&display=swap" rel="stylesheet">
@@ -80,7 +80,7 @@
                     <h2>Explore What You Can Do With Us</h2>
                     <p>Dive deep into the cosmos with our cutting-edge technology. Our platform offers unparalleled access to high-resolution space imagery, allowing you to zoom in on distant galaxies, nebulae, and planetary surfaces with incredible detail. Powered by advanced data processing, we bring the universe closer to you than ever before.</p>
                     <p>From scientific research to personal exploration, our tools provide a unique perspective. Analyze celestial bodies, track mission progress, and discover new wonders. Join a community of space enthusiasts and contribute to the ongoing exploration of the final frontier. The possibilities are as vast as the universe itself.</p>
-                    <a href="docs/reciver.html" class="btn-primary">Start Deep Zooming <i class="fas fa-search-plus"></i></a>
+                    <a href="reciver.html" class="btn-primary">Start Deep Zooming <i class="fas fa-search-plus"></i></a>
                 </div>
                 <div class="explore-image-column glass-effect">
                     <div id="openseadragon-viewer" class="openseadragon-viewer"></div>
