--- a/reciver.html
+++ b/reciver.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="GalaxiesOfDreams/index.html">Home</a></li>
                 <li><a href="Earth.html">Earth</a></li>
                 <li><a href="Mars.html">Mars</a></li>
                 <li><a href="Moon.html">Moon</a></li>
@@ -34,3 +34,4 @@
 </body>
 
 </html>
+
