Change Earth image source in viewer
Updated the image source for Earth in the OpenSeadragon viewer.

--- a/Earth.html
+++ b/Earth.html
@@ -87,7 +87,8 @@
         // صورة الأرض عالية الدقة
         tileSources: {
           type: 'image',
-          url: 'https://eoimages.gsfc.nasa.gov/images/imagerecords/74000/74192/world.topo.bathy.200412.3x5400x2700.jpg'
+          url: 'Earth.png'
+          // بدل من https://eolimages.gsfc.nasa.gov/images/imagerecords/74000/74192/world.topic.bathy.200412.3x5400x2700.jpg
         },
         showNavigator: true,
         navigatorPosition: "BOTTOM_RIGHT",
@@ -110,4 +111,5 @@
     </script>
     <script src="script.js"></script>
 </body>
+
 </html>
