--- a/Earth.html
+++ b/Earth.html
@@ -87,7 +87,7 @@
         // صورة الأرض عالية الدقة
         tileSources: {
           type: 'image',
-          url: 'Earth.png'
+          url: 'Earth1.jpg'
           // بدل من https://eolimages.gsfc.nasa.gov/images/imagerecords/74000/74192/world.topic.bathy.200412.3x5400x2700.jpg
         },
         showNavigator: true,
@@ -113,3 +113,4 @@
 </body>
 
 </html>
+
