New release with some fixes

--- a/Earth.html
+++ b/Earth.html
@@ -47,20 +47,7 @@
   </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <i class="fas fa-satellite"></i>
-            <span>Galaxies Of Dreams</span>
-        </div>
-        <nav>
-            <ul></ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="reciver.html">Services</a></li>
-                <li><a href="Mars.html">Mars</a></li>
-                <li><a href="Moon.html">Moon</a></li>
-            </ul>
-        </nav>
-    </header>
+    
 
     <main>
         <div id="controls">
@@ -87,7 +74,7 @@
         // صورة الأرض عالية الدقة
         tileSources: {
           type: 'image',
-          url: 'https://eoimages.gsfc.nasa.gov/images/imagerecords/74000/74192/world.topo.bathy.200412.3x5400x2700.jpg'
+          url: 'ImgFold/Earth1.jpg'
         },
         showNavigator: true,
         navigatorPosition: "BOTTOM_RIGHT",
