--- a/Mars.html
+++ b/Mars.html
@@ -47,21 +47,6 @@
   </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <i class="fas fa-satellite"></i>
-            <span>Galaxies Of Dreams</span>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="reciver.html">Services</a></li>
-                <li><a href="Earth.html">Earth</a></li>
-                <li><a href="Moon.html">Moon</a></li>
-            </ul>
-        </nav>
-    </header>
-
   <div id="controls">
     <button onclick="viewer.viewport.zoomBy(1.2);viewer.viewport.applyConstraints();">🔍 +</button>
     <button onclick="viewer.viewport.zoomBy(0.8);viewer.viewport.applyConstraints();">🔍 -</button>
@@ -85,7 +70,7 @@
       // 🔹 لو صورة واحدة عادية JPG/PNG:
       tileSources: {
         type: 'image',
-        url: 'https://images-assets.nasa.gov/image/PIA02697/PIA02697~orig.jpg' // هنا تحط مسار صورتك
+        url: 'ImgFold/Mars03.jpg' // هنا تحط مسار صورتك
       },
 
       showNavigator: true,
