--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="hero-background-gradient"></div>
             <div class="hero-content">
                 <h1>Your journey into the unknown begins now.</h1>
-                <p>Explore the depths of the universe and learn its secrets with the latest technology, using Livit</p>
+                <p>Explore the depths of the universe and learn its secrets with the latest technology</p>
                 <div class="hero-cta-buttons">
                     <a href="#h" class="btn-primary">Start Discovering</a>
                     <a href="#" class="btn-secondary" onclick="alert()">Watch video<i class="fas fa-play"></i></a>
